Updated Classes
Updating to add Swing GUI to the game